
relaxngdir = $(datadir)/florence/relaxng
relaxng_DATA = README florence.rng style.rng svg-basic-graphics-attrib.rng svg-docevents-attrib.rng svg-image.rng\
            svg-structure.rng svg-basic-structure.rng svg-extensibility.rng svg-marker.rng svg-style.rng\
            svg-basic-text.rng svg-extresources-attrib.rng svg-mask.rng svg-text.rng\
            svg11.rng svg-clip.rng svg-filter.rng svg-opacity-attrib.rng svg-viewport-attrib.rng\
            svg-animation.rng svg-conditional.rng svg-font.rng svg-paint-attrib.rng svg-view.rng\
            svg-animevents-attrib.rng svg-container-attrib.rng svg-gradient.rng svg-pattern.rng svg-xlink-attrib.rng\
            svg-basic-clip.rng svg-core-attrib.rng svg-graphevents-attrib.rng svg-profile.rng\
            svg-basic-filter.rng svg-cursor.rng svg-graphics-attrib.rng svg-script.rng\
            svg-basic-font.rng svg-datatypes.rng svg-hyperlink.rng svg-shape.rng

EXTRA_DIST = $(relaxng_DATA)

