
svg11dir = $(datadir)/florence/svg11
svg11_DATA = README svg-basic-graphics-attrib.rnc svg-docevents-attrib.rnc svg-image.rnc svg-structure.rnc\
            svg-basic-structure.rnc svg-extensibility.rnc svg-marker.rnc svg-style.rnc\
            svg-basic-text.rnc svg-extresources-attrib.rnc svg-mask.rnc svg-text.rnc\
            svg11.rnc svg-clip.rnc svg-filter.rnc svg-opacity-attrib.rnc svg-viewport-attrib.rnc\
            svg-animation.rnc svg-conditional.rnc svg-font.rnc svg-paint-attrib.rnc svg-view.rnc\
            svg-animevents-attrib.rnc svg-container-attrib.rnc svg-gradient.rnc svg-pattern.rnc svg-xlink-attrib.rnc\
            svg-basic-clip.rnc svg-core-attrib.rnc svg-graphevents-attrib.rnc svg-profile.rnc\
            svg-basic-filter.rnc svg-cursor.rnc svg-graphics-attrib.rnc svg-script.rnc\
            svg-basic-font.rnc svg-datatypes.rnc svg-hyperlink.rnc svg-shape.rnc

EXTRA_DIST = $(svg11_DATA)

